<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mainTitle">Asteroides</string>
    <string name="mainButtonPlay">Jugar</string>
    <string name="mainButtonSettings">Configurar</string>
    <string name="mainButtonAbout">Acerca de&#8230;</string>
    <string name="mainButtonScores">Puntuaciones</string>
	<string name="mainButtonExit">Salir</string>
	<string name="mainVersionInfo">Default language - Versión 1.00 (03/03/2013)</string>
	<string name="mainDescription">Application&amp;apos;s main screen</string>
	<string name="mainClock">CurrentTime</string>
	<string name="aboutText">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
	<string name="aboutActivityLabel">Acerca de&#8230;</string>
	<string name="menuConfiguration">Configuración</string>
	<string name="menuAbout">Acerca de&#8230;</string>
	<string name="preferencesMusicSummary">Permite seleccionar si se desea que se reproduzca o no la música del juego</string>
	<string name="preferencesMusicTitle">Reproducir música</string>
	<string name="preferencesGraphicsSummary">Tipo de gráficos que se utilizará para el juego</string>
	<string name="preferencesGraphicsTitle">Tipo de gráficos</string>
	<string name="preferencesFragmentsSummary">Número de fragmentos en los que se divide un asteroide al ser destruido</string>
	<string name="preferencesFragmentsTitle">Fragmentos por asteroide</string>
	<string name="preferencesActivityLabel">Preferencias</string>
	<string name="preferencesStorageSummary">Permite seleccionar dónde almacenar las puntuaciones de la aplicación</string>
	<string name="preferencesStorageTitle">Almacenamiento de puntuaciones</string>
	<string name="scoreBoardTitle">Score board</string>
	<string name="scoreBoardEmptyList">There is not any score registered</string>
	<string name="musicServiceStarted">Asteroids music service created</string>
	<string name="musicServiceStopped">Asteroids music service stopped</string>
	<string name="musicServiceNotificationTitle">Asteroids music service enabled</string>
	<string name="musicServiceNotificationInfo">Asteroids ingame music service is enabled</string>
	<string name="musicServiceNotificationInfo2">Tap here to open Asteroids</string>
</resources>