<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLand"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:contentDescription="@string/mainDescription"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Asteroids" >

    <DigitalClock
        android:id="@+id/mainClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/mainClock"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="@string/mainTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:typeface="normal" />

    <Button
        android:id="@+id/mainButtonPlay"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="launchGame"
        android:text="@string/mainButtonPlay" />

    <Button
        android:id="@+id/mainButtonSettings"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="launchPreferences"
        android:text="@string/mainButtonSettings" />

    <Button
        android:id="@+id/mainButtonAbout"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/mainButtonAbout" />

    <Button
        android:id="@+id/mainButtonScores"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="launchScoreBoard"
        android:text="@string/mainButtonScores" />

    <Button
        android:id="@+id/mainButtonExit"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/mainButtonExit" />

    <TextView
        android:id="@+id/mainVersionInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_weight="0.12"
        android:gravity="bottom|right"
        android:text="@string/mainVersionInfo"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic" />

</LinearLayout>